--- a/app/src/app/main/main.html
+++ b/app/src/app/main/main.html
@@ -1,1 +1,18 @@
-<p>main works!</p>
+<clr-alert [clrAlertType]="alertType">
+	<clr-alert-item>
+		<span class="alert-text">{{alertText}}</span>
+	</clr-alert-item>
+</clr-alert>
+<clr-datagrid [ngClass]="{'datagrid-compact': true}">
+	<clr-dg-column>User ID</clr-dg-column>
+	<clr-dg-column>Name</clr-dg-column>
+	<clr-dg-column>Creation date</clr-dg-column>
+	<clr-dg-column>Favorite color</clr-dg-column>
+
+	<clr-dg-row *ngFor="let user of users">
+		<clr-dg-cell>{{ user.id }}</clr-dg-cell>
+		<clr-dg-cell>{{ user.name }}</clr-dg-cell>
+		<clr-dg-cell>{{ user.creation | date }}</clr-dg-cell>
+		<clr-dg-cell>{{ user.color }}</clr-dg-cell>
+	</clr-dg-row>
+</clr-datagrid>
