--- a/app/src/app/main/main.html
+++ b/app/src/app/main/main.html
@@ -3,16 +3,20 @@
 		<span class="alert-text">{{alertText}}</span>
 	</clr-alert-item>
 </clr-alert>
-<clr-datagrid [ngClass]="{'datagrid-compact': true}">
-	<clr-dg-column>User ID</clr-dg-column>
-	<clr-dg-column>Name</clr-dg-column>
-	<clr-dg-column>Creation date</clr-dg-column>
-	<clr-dg-column>Favorite color</clr-dg-column>
+<clr-datagrid (clrDgRefresh)="refresh($event)" [clrDgLoading]="loading">
+	<clr-dg-column [clrDgField]="'film_id'">Film Id</clr-dg-column>
+	<clr-dg-column [clrDgField]="'title'">Title</clr-dg-column>
+	<clr-dg-column [clrDgField]="'description'">Description</clr-dg-column>
+	<clr-dg-column [clrDgField]="'release_year'">Release year</clr-dg-column>
 
-	<clr-dg-row *ngFor="let user of users">
-		<clr-dg-cell>{{ user.id }}</clr-dg-cell>
-		<clr-dg-cell>{{ user.name }}</clr-dg-cell>
-		<clr-dg-cell>{{ user.creation | date }}</clr-dg-cell>
-		<clr-dg-cell>{{ user.color }}</clr-dg-cell>
+	<clr-dg-row *ngFor="let film of films">
+		<clr-dg-cell>{{ film.film_id }}</clr-dg-cell>
+		<clr-dg-cell>{{ film.title }}</clr-dg-cell>
+		<clr-dg-cell>{{ film.description }}</clr-dg-cell>
+		<clr-dg-cell>{{ film.release_year }}</clr-dg-cell>
 	</clr-dg-row>
+
+	<clr-dg-footer>
+		<clr-dg-pagination #pagination [clrDgTotalItems]="total"></clr-dg-pagination>
+	</clr-dg-footer>
 </clr-datagrid>
